Fix for mobile display overlap

--- a/css/mobileStyles.css
+++ b/css/mobileStyles.css
@@ -136,4 +136,8 @@
         font-size: 60px;
         color: #fefefe;
     }
+
+    .projWrapper {
+        margin-bottom: 1.2rem;
+    }
 }
